# mobile_manipulation_central

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
catkin/: config.yaml
config/: home.yaml  null_transforms.yaml
config/ur10/: null_transforms.yaml  transforms.yaml
docs/calibration/: Makefile  calibration.tex
docs/calibration/figures/: robot_calibration.ipe
include/mobile_manipulation_central/: exponential_smoothing.h  kalman_filter.h  kinematics.h  projectile.h  robot_interfaces.h  wrap.h
launch/: force_torque_sensor.launch  ridgeback_only.launch  ridgeback_vicon.launch  thing.launch  thing_description.launch  ur10.launch  vicon.launch
scripts/analysis/: kinematics.py  plot_base_velocity_response.py  plot_joint_states.py  plot_projectile.py  plot_quintic_trajectory.py  plot_ridgeback_velocity_response.py  plot_ur10_velocity_response.py  plot_vel_response.py  plot_vicon_object.py  plot_vicon_objects.py
scripts/calibration/: calibrate_base.py  calibrate_base_orientation.py  calibrate_base_position.py  calibrate_ee.py  collect_arm_calibration_data.py  collect_base_calibration_data.py  collect_base_orientation_calibration_data.py  collect_base_position_calibration_data.py  new_transforms_2022-12-08_23-16-07.yaml  print_vicon_marker_positions.py  test1_2022-12-09_01-15-17.yaml
scripts/control/: gripper.py  home.py  joy_stick_relay_node.py  record.sh  ridgeback_velocity_test.py  sine_trajectory.py  stop.py  ur10_sine_trajectory.py  ur10_velocity_test.py  velocity_test.py
scripts/logging/: battery_voltage.py  motor_voltage.py  record.py  record_bag.sh
scripts/simulation/: pyb_simulation.py  simulated_mobile_manipulator_node.py
src/: joy_stick_relay_node.py  kinematics_example.cpp  projectile_vicon_estimator_node.cpp  pybindings.cpp  ridgeback_vicon_estimator_node.cpp
src/mobile_manipulation_central/: __init__.py  joy_stick_relay.py  kalman_filter.py  kinematics.py  logging.py  mobile_manipulator_ros_interface.py  ros_interface.py  ros_logging.py  ros_utils.py  simulation.py  simulation_ros_interface.py  smoothing.py  sysid.py  trajectory_client.py  trajectory_generation.py  ur10.py  utils.py  xacro_utils.py
test/: test_kinematics.py  test_ros_utils.py  test_smoothing.py  test_trajectory.py
urdf/: compile_xacro.sh
urdf/compiled/: thing_no_wheels.urdf
urdf/xacro/: cartesian_base_joints.urdf.xacro  ridgeback_wheels.urdf.xacro  thing.urdf.xacro  thing_no_wheels.urdf.xacro  thing_pyb.urdf.xacro  ur10.urdf.xacro
